--- a/src/web/style.css
+++ b/src/web/style.css
@@ -1,65 +1,63 @@
 *{
-    border: 0;
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+    font-family: monospace;
 }
 
-#header{
-    background-color: red;
-}
-body{
+body {
     display: flex;
     justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    background: linear-gradient(to right, #051f20,#031212);
+}
+.container{
+    margin: 0 15px;   
+}
+
+.form_box{
+    width: 100%;
+    max-width: 300px;
+    padding: 30px;
+    background: #d5f365;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+h2{
+    font-size: 44px;
     text-align: center;
-    background-color: #051f20;
-    height: 100%;
-}
-.Login{
-    margin: 100px 0px;
-    justify-content: center;
-    text-align: center;
-    background-color: #163832;
-    height: 350px;
-    width: 250px;
-    border-radius: 9px;
-}
-.text{
-    margin: 9px;
-    color: wheat;
+    margin-bottom: 20px;
 }
 
-.loginButton{
-    background-color: #8be69b;
-    height: 50px;
-    width: 100px;
-    border-radius: 15%;
-    margin: 30px 0px;
+input{
+    width: 100%;
+    padding: 12px;
+    background: #eee;
+    border-radius: 6px;
+    border: none;
+    outline: none;
+    font-size: 26px;
+    color: #333;
+    margin-bottom: 20px;
 }
 
-.inputText{
-    border-radius: 9px;
+button{
+    width: 100%;
+    padding: 12px;
+    background-color: #C3D900;
+    border-radius: 6px;
+    border: none;
+    cursor: pointer;
+    font-size: 24px;
+    color: cornsilk;
+    font-weight: 500;
+    margin-bottom: 20px;
+    transition: 0.5s;
+}
+button:hover{
+    background: #e5ff00;
 }
 
-#bottone1 {
-margin: 30px 0px;
- padding-left: 33px;
- padding-right: 33px;
- padding-bottom: 16px;
- padding-top: 16px;
- border-radius: 9px;
- background: #d5f365;
- border: none;
- font-family: inherit;
- text-align: center;
- cursor: pointer;
- transition: 0.4s;
-}
 
-#bottone1:hover {
- box-shadow: 7px 5px 56px -14px #C3D900;
-}
-
-#bottone1:active {
- transform: scale(0.97);
- box-shadow: 7px 5px 56px -10px #C3D900;
-}
