--- a/src/web/style.css
+++ b/src/web/style.css
@@ -2,7 +2,8 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: monospace;
+    font-family: "Lexend", sans-serif;
+
 }
 
 body {
@@ -10,7 +11,7 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: linear-gradient(to right, #051f20,#031212);
+    background: radial-gradient(circle, #051f20,#031212);
 }
 .container{
     margin: 0 15px;   
@@ -19,20 +20,24 @@ body {
 .form_box{
     width: 100%;
     max-width: 300px;
+    max-height: 350px;
     padding: 30px;
     background: #d5f365;
-    border-radius: 10px;
+    border-radius: 36px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    text-align: center;
 }
 
 h2{
     font-size: 44px;
     text-align: center;
     margin-bottom: 20px;
+    font-weight: bold;
 }
 
 input{
     width: 100%;
+    height: 55px;
     padding: 12px;
     background: #eee;
     border-radius: 6px;
@@ -45,6 +50,7 @@ input{
 
 button{
     width: 100%;
+    max-width: 158px;
     padding: 12px;
     background-color: #C3D900;
     border-radius: 6px;
