--- a/src/web/css/styleUser.css
+++ b/src/web/css/styleUser.css
@@ -10,10 +10,12 @@ body {
     min-height: 100vh;
     background: radial-gradient(circle, #051f20,#031212);
 }
-.container{
-    display: grid;
-    grid-template-columns: 1fr 9fr; /* Duas colunas de tamanho igual */
-    gap: 20px;
+h2{
+    color: aliceblue;
+    font-size: 34px;
+    text-align: left;
+    margin-bottom: 20px;
+    font-weight: bold;
 }
 
 button{
@@ -31,23 +33,35 @@ button:hover{
     background: #e5ff00;
 }
 
+#user{
+    margin-top: 20px;
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+    gap: 12px;
+    margin-bottom: 12px;
+}
+
+.container{
+    display: grid;
+    grid-template-columns: 1fr 9fr;
+}
+
 .sideBar{
+    display: grid;
+    grid-template-rows: 1fr 1fr 3fr 1fr;
+    justify-items: center;
     width: 70px;
     height: 100vh;
     background: #d5f365;
     border-radius: 36px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    text-align: center;
 
 }
-.Info{
-    width: 450px;
-    height: 200px;
-    margin-top: 20px;
+.person{
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 0px;
+    grid-template-columns: 1fr 9fr;
     align-items: center;
+    gap: 12px;
 }
 
 .img{
@@ -57,10 +71,19 @@ button:hover{
     background: #ccd1bc;
 }
 
-h2{
+.tabela{
+    margin-top: 12px;
+    display: grid;
     color: aliceblue;
     font-size: 34px;
-    text-align: left;
-    margin-bottom: 20px;
-    font-weight: bold;
+    text-align: center;
+}
+
+.visible {
+    opacity: 1;
+    visibility: visible;
+}
+
+.hidden {
+    display: none;
 }
